# anchor-spl-token-interest-vaults

./: Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json
interest-giver/: Cargo.toml  readme.md
interest-giver/src/: main.rs
programs/gfx-token-vaults/: Cargo.toml
programs/gfx-token-vaults/src/: initialise.rs  interestvault.rs  lib.rs  transaction.rs
tests/: gfx-token-vaults.ts
